# relay-workspace

./: .gitignore  .graft  README.md  ROADMAP.md  TOOL_EVENT_MAPPING.md  indian-stock-picks-april-2026.md  pyproject.toml  run.sh  run_build.sh  run_notui.sh
claude/: outbox.md
codex/: inbox.md  outbox.md
harness/: __init__.py  __main__.py  checks.py  cli.py  core.py  dashboard.py  executor.py  intent.py  interpreter.py  obligations.py  policy.py  registry.py  scheduler.py  sdk.py  sqlite_store.py  state.py  store.py  types.py
prior_work/: assumptions.md  decisions.md  mvp_spec.md  test_matrix.md
prior_work/prototype/: harness.ts
relay_discussion/: __init__.py  cli.py  cli_providers.py  config.py  engine.py  harness_adapter.py  models.py  moderator.py  modes.py  mount.py  observability.py  policy.py  policy_relay.py  providers.py  session.py  transcript.py  tui.py  web.py  workspace.py
tests/: test_checks.py  test_cli_mount.py  test_cli_providers.py  test_dashboard.py  test_e2e_harness.py  test_harness.py  test_harness_adapter.py  test_intent.py  test_lifecycle.py  test_moderator.py  test_modes.py  test_mount.py  test_observability.py  test_policy.py  test_relay.py  test_scheduler.py  test_sdk.py  test_session.py  test_state.py  test_store_ext.py  test_streaming.py  test_tui.py  test_web.py  test_workspace.py
