[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-discussion"
version = "0.1.0"
description = "A minimal multi-agent relay CLI with persisted transcripts."
requires-python = ">=3.11"
dependencies = [
    "intent-to-action @ git+https://github.com/SatishoBananamoto/intent-to-action.git",
]

[project.optional-dependencies]
tui = ["prompt_toolkit>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
